cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JMaximusIX
maintainer:         nix@gibts

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library Year2022
    exposed-modules: Year2022

    other-modules: Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15
    hs-source-dirs: Year2022
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        template-haskell,
        extra,
        containers,
        linear,
        ilist,
        split
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

library Year2023
    exposed-modules: Year2023

    other-modules: Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25
    hs-source-dirs: Year2023
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        template-haskell,
        containers,
        ghc,
        extra,
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

library MyLib
    exposed-modules:  MyLib, TemplateHS

    -- Modules included in this library but not exported.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        advent-of-code-api,
        template-haskell,
        extra,
        formatting,
        time
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Clap
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        MyLib,
        Year2023,
        Year2022,
        advent-of-code-api,
        template-haskell,
        optparse-applicative,
        load-env,
        ghc,
        text,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns
