cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JMaximusIX
maintainer:         jmaximusix@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library Year2015
    exposed-modules: Year2015

    other-modules: Day01
    hs-source-dirs: Year2015
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        template-haskell,
        extra,
        containers,
        combinatorial,
        linear,
        ilist,
        search-algorithms,
        split
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

library Year2022
    exposed-modules: Year2022

    other-modules: Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15
    hs-source-dirs: Year2022
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        template-haskell,
        extra,
        containers,
        combinatorial,
        linear,
        ilist,
        search-algorithms,
        split
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

library Year2023
    exposed-modules: Year2023

    other-modules: Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25
    hs-source-dirs: Year2023
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        search-algorithms,
        template-haskell,
        containers,
        ghc,
        combinatorial,
        extra,
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

library Year2024
    exposed-modules: Year2024

    other-modules: Day01
    hs-source-dirs: Year2024
    default-language: Haskell2010
    build-depends: base ^>=4.16.4.0,
        MyLib,
        advent-of-code-api,
        search-algorithms,
        template-haskell,
        containers,
        combinatorial,
        extra,
    
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

-- Note to future me on how to add a new year:
-- 1. Create a new directory for the year.
-- 2. Create a new library section for the year.
-- 3. Add the new library to the build-depends of the executable.
-- 4. Import the library in Main.hs
-- 5. Add the new year to the list of years in TemplateHS.hs:31
-- 6. Add traceShowId around (year) in Main.hs:97 (let solutions = ...)
--    For whatever reason this is necessary for the first execution otherwise TH won't register the new solutions.

library MyLib
    exposed-modules:  MyLib, TemplateHS, Geometry
    -- Modules included in this library but not exported.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        advent-of-code-api,
        template-haskell,
        extra,
        formatting,
        time
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Clap
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        MyLib,
        Year2015,
        Year2022,
        Year2023,
        Year2024,
        advent-of-code-api,
        template-haskell,
        optparse-applicative,
        load-env,
        timeit,
        ghc,
        text,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns
