cabal-version:      2.4
name:               advent-of-code2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JMaximusIX
maintainer:         nix@gibts

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        advent-of-code-api,
        time
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Year2023, THUtils, Clap,
        Year2023,
        Year2023.Day1
        Year2023.Day2
        Year2023.Day3
        Year2023.Day4
        Year2023.Day5
        Year2023.Day6
        Year2023.Day7
        Year2023.Day8
        Year2023.Day9
        Year2023.Day10
        Year2023.Day11
        Year2023.Day12
        Year2023.Day13
        Year2023.Day14
        Year2023.Day15
        Year2023.Day16
        Year2023.Day17
        Year2023.Day18
        Year2023.Day19
        Year2023.Day20
        Year2023.Day21
        Year2023.Day22
        Year2023.Day23
        Year2023.Day24
        Year2023.Day25
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        advent-of-code2023,
        advent-of-code-api,
        template-haskell,
        optparse-applicative,
        load-env,
        containers,
        split,
        ghc,
        extra,
        text

    hs-source-dirs:   app, app/Year2023
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -Wno-incomplete-patterns -Wno-incomplete-uni-patterns
